[package]
authors = ["curlpipe <11898833+curlpipe@users.noreply.github.com>"]
categories = ["text-processing"]
description = "A crate to assist in the creation of TUI text editors."
edition = "2021"
exclude = ["/demos/7.txt"]
keywords = ["unicode", "text-processing"]
license = "MIT"
name = "kaolinite"
readme = "README.md"
repository = "https://github.com/curlpipe/kaolinite"
version = "0.6.1"

[workspace]
members = ["./examples/cactus"]

[profile.release]
debug = true
lto = true
strip = true

[dependencies]
quick-error = "2.0.1"
regex = "1.6.0"
ropey = "1.5.0"
unicode-width = "0.1.9"

[dev-dependencies]
rand = "0.8.5"
sugars = "3.0.1"

[[example]]
name = "open"

[[example]]
name = "trim"
